<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearLayout_Padrao"
    tools:context="br.com.regilan.gasosa.CustoTrajetoActivity">



    <TextView
        android:id="@+id/textView2"
        style="@style/TextView_Titulo"
        android:text="@string/str_custo_trajeto" />
    <CheckBox
        android:id="@+id/ckUsarHistoricoConsumo"
       style="@style/CheckBox_Padrao"
        android:text="@string/str_usar_meu_historico_consumo" />
    <TextView
        android:id="@+id/textView3"
        style="@style/TextView_Padrao"
        android:text="@string/str_autonomia" />

    <EditText
        android:id="@+id/txtAutonomia"
        style="@style/EditText_Padrao"
        android:ems="10"
        android:hint="0,00"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView4"
        style="@style/TextView_Padrao"
        android:text="@string/str_distancia_trajeto" />

    <EditText
        android:id="@+id/txtDistanciaTrajeto"
        style="@style/EditText_Padrao"
        android:ems="10"
        android:hint="0"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView5"
        style="@style/TextView_Padrao"
        android:text="@string/str_preco_combustivel" />

    <EditText
        android:id="@+id/txtPrecoCombustivel"
        style="@style/EditText_Padrao"
        android:ems="10"
        android:hint="0,00"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btCalcular"
        style="@style/Botao_Padrao"
        android:text="@string/str_calcular" />

    <TextView
        android:id="@+id/textView6"
        style="@style/TextView_Titulo"
        android:text="@string/str_custo_trajeto_reais" />

    <TextView
        android:id="@+id/tvResultado"
        style="@style/TextView_Resultado"
        android:text="" />
</LinearLayout>
