<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >



<LinearLayout
    style="@style/LinearLayout_Padrao"
    tools:context="br.com.regilan.gasosa.CustoAbastecimentoActivity"
    >
    <TextView
        android:id="@+id/textView2"
        style="@style/TextView_Titulo"
        android:text="@string/str_custo_abastecimento" />

    <TextView
        android:id="@+id/textView3"
        style="@style/TextView_Padrao"
        android:text="@string/str_valor_abastecer" />

    <EditText
        android:id="@+id/txtValorAbastecer"
        style="@style/EditText_Padrao"
        android:ems="10"
        android:hint="0,00"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView4"
        style="@style/TextView_Padrao"
        android:text="@string/str_preco_combustivel" />

    <EditText
        android:id="@+id/txtPrecoCombustivel"
        style="@style/EditText_Padrao"
        android:ems="10"
        android:hint="0,00"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btCalcular"
        style="@style/Botao_Padrao"
        android:text="@string/str_calcular" />

    <TextView
        android:id="@+id/textView5"
        style="@style/TextView_Titulo"
        android:text="@string/str_quantidade_combustivel" />

    <TextView
        android:id="@+id/tvResultado"
        style="@style/TextView_Resultado"
        android:text="" />



</LinearLayout>
</ScrollView>