<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearLayout_Padrao"
    tools:context="br.com.regilan.gasosa.TrocaOleoActivity">


    <TextView
        android:id="@+id/textView9"
        style="@style/TextView_Titulo"
        android:text="@string/str_proxima_troca" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvDataProximaTroca"
                style="@style/TextView_PadraoListView"
                android:text="25/02/2018" />

            <TextView
                android:id="@+id/tvKmProximaTroca"
                style="@style/TextView_PadraoListView"
                android:text="55605" />

            <TextView
                android:id="@+id/tvkm"
                style="@style/TextView_DestaquePequenoListView"
                android:text="km" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView19"
        style="@style/TextView_Titulo"
        android:text="@string/str_ultima_troca" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvDataUltimaTroca"
                style="@style/TextView_PadraoListView"
                android:text="25/02/2017" />

            <TextView
                android:id="@+id/tvKmUltimaTroca"
                style="@style/TextView_PadraoListView"
                android:text="45605" />

            <TextView
                android:id="@+id/tvkm2"
                style="@style/TextView_DestaquePequenoListView"
                android:text="km" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView2"
        style="@style/TextView_Titulo"
        android:text="@string/troca_oleo" />

    <TextView
        android:id="@+id/textView3"
        style="@style/TextView_Padrao"
        android:text="@string/str_km_troca_oleo" />

    <EditText
        android:id="@+id/txtKmTrocaOleo"
        style="@style/EditText_Padrao"
        android:ems="10"
        android:hint="0"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView4"
        style="@style/TextView_Padrao"
        android:text="@string/str_data_troca" />


    <DatePicker
        android:id="@+id/txtDataTrocaOleo"
        style="@style/DatePicker_Padrao"
        />


    <TextView
        android:id="@+id/textView5"
        style="@style/TextView_Padrao"
        android:text="@string/str_km_proxima_troca_oleo" />

    <EditText
        android:id="@+id/txtKmProximaTroca"
        style="@style/EditText_Padrao"
        android:ems="10"
        android:hint="0"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView7"
        style="@style/TextView_Padrao"
        android:text="@string/str_data_proxima_troca" />

    <DatePicker
        android:id="@+id/txtDataProximaTrocaOleo"
        style="@style/DatePicker_Padrao"
        />



    <Button
        android:id="@+id/btRegistrar"
        style="@style/Botao_Padrao"
        android:text="@string/str_registrar" />

    <ListView
        android:id="@+id/lvTrocaOleo"
        style="@style/ListView_Padrao" />
</LinearLayout>

    </ScrollView>
